fixes for ie8
displaying message to ie8- users telling them the page won't work
png fallbacks for svg graphs
tweaks to css to make it look less bad (doesn't look much better though - not worth effort)

--- a/source/scss/legacy-ie.scss
+++ b/source/scss/legacy-ie.scss
@@ -2,31 +2,36 @@ $fix-mqs: 1024px;
 
 @import "main";
 
+.hero {
+    &-image {
+        height: auto;
+    }
+    &-title {
+        position: static;
+        color: #222;
+    }
+}
+
 .browser-notify {
-
-	background-color: #333;
-	width:100%;
-
-	.browser-notify__banner {
-
-		color: #fff;
-		margin: 0 auto;
-		max-width: 992px;
-		padding: 10px;
-
-		.browser-notify__icon {
-			background: url('../img/news--icons-sprite.png') no-repeat;
-			background-position: -6px -6110px;
-			float: left;
-			height: 20px;
-			margin-left: 8px;
-			width: 20px;
-		}
-
-		span {
-			margin-left:10px;
-			color:#fff;
-			font-size: 14px;
-		}
-	}
+    background-color: #333;
+    width:100%;
+    &__banner {
+        color: #fff;
+        margin: 0 auto;
+        max-width: 992px;
+        padding: 10px;
+        span {
+            margin-left:10px;
+            color:#fff;
+            font-size: 14px;
+        }
+    }
+    &__icon {
+        background: url('../img/news--icons-sprite.png') no-repeat;
+        background-position: -6px -6110px;
+        float: left;
+        height: 20px;
+        margin-left: 8px;
+        width: 20px;
+    }
 }
